feat: enhance task management with role-based access control and user-specific task operations